@@ -1,0 +1,29 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+
+<html>
+<head>
+<title>Eclipse-OProfile: Downloads</title>
+<link rel="stylesheet" href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile-home/css/main.css?cvsroot=Tools_Project" type="text/css">
+</head>
+<body>
+<table width="100%">
+<tr>
+<td>
+<p class="indextop">Eclipse-OProfile Downloads</p>
+<p class="indexsub">Get the latest Eclipse-OProfile!</p>
+</td>
+<td align="right">
+<img src="http://dev.eclipse.org/images/Idea.jpg" alt="Idea">
+</td>
+</tr>
+</table>
+
+<table class="section">
+<tr><td>Downloads</td></tr>
+</table>
+<p><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile-0_5_4-branch.zip">Eclipse-OProfile for OProfile 0.5.4</a> (October 13, 2004)</p>
+<p><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile.zip">Eclipse-OProfile</a> for Oprofile 0.8 (October 13, 2004)</p>
+
+</body>
+</html>
