@@ -31,7 +31,7 @@ provide users with an easy-to-use interface for profiling C/C++
 applications.</p> 
 
 <p>Interested parties are strongly encouraged to participate in the development
-of Eclipse-OProfile.  Get involved in Eclipse-OProfile!</p>
+of Eclipse-OProfile.  <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile-home/developer/info.html?cvsroot=Tools_Project">Get involved</a> in Eclipse-OProfile!</p>
 
 <p>The OProfile back-end is required by Eclipse-OProfile and is only available
 on the Linux operating system.  The OProfile back-end is a standalone,
@@ -61,17 +61,14 @@ Eclipse-OProfile on Eclipse.org!  Red Hat has donated Eclipse-OProfile to the
 Eclipse Foundation's C/C++ Development Tools project and is actively
 encouraging other participants to get involved in development.</p>
 
-<p>Until the new Eclipse.org mailing list is set up, please use the <a
-href="mailto:cdt-dev@eclipse.org">cdt-dev@eclipse.org</a> mailing list for all
-developer communication and please send patches to the <a
-href="mailto:cdt-patch@eclipse.org">cdt-patch@eclipse.org</a> mailing list.</a>
+<p>Please use the new <a
+href="mailto:cdt-contrib-dev@eclipse.org">cdt-contrib-dev@eclipse.org</a>
+mailing list for all developer communication.  For more information about how
+to get involved in Eclipse-OProfile development, have a look at the <a
+href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile-home/developer/info.html?cvsroot=Tools_Project">developer
+information</a>.
 
-<p>Also, please use <a href="https://bugzilla.redhat.com">Red Hat's
-Bugzilla</a> until the new Eclipse.org Bugzilla components are set up.
-Eclipse-OProfile bugs should be filed under the Red Hat Developer Suite
-product, version 2.0, Profiling Plug-in.</p>
-
-<p class="timestamp">posted 2004-10-12 by Jeremy Handcock</p>
+<p class="timestamp">posted 2004-10-18 by Jeremy Handcock</p>
 
 </td></tr>
 </table>
@@ -88,9 +85,9 @@ product, version 2.0, Profiling Plug-in.</p>
 </tr>
 
 <tr>
-<td>Downloads</td>
-<td>Download Eclipse-OProfile builds</td>
-</tr>
+<td><a
+href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile-home/downloads.html?cvsroot=Tools_Project">Downloads</a></td>
+<td>Download Eclipse-OProfile builds</td> </tr>
 
 <!--
 <tr>
@@ -105,7 +102,8 @@ product, version 2.0, Profiling Plug-in.</p>
 
 <tr>
 <td><a href="http://bugs.eclipse.org/bugs">Bugzilla</a></td>
-<td>Open bugs or enhancement requests for Eclipse-OProfile</td>
+<td>Open bugs or enhancement requests for Eclipse-OProfile<br>
+Bugs are filed under the CDT project, CDT-Contrib component</td>
 </tr>
 
 <tr>
