@@ -1,3 +1,8 @@
+2004-10-18  Jeremy Handcock  <handcock@redhat.com>
+
+	* index.html: Update news, add downloads link.
+	* downloads.html: New.
+
 2004-10-13  Jeremy Handcock  <handcock@redhat.com>
 
 	* index.html: Correct path to stylesheet.
